--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,16 +2,16 @@
 name = "avr-flight"
 version = "0.1.0"
 authors = ["dev_jeb <developer_jeb@outlook.com>"]
-edition = "2024"
+edition = "2018"
+
+[profile.dev]
+panic = "abort"
+debug = true
+opt-level = 0
 
 [profile.release]
 panic = "abort"
+opt-level = 3
+debug = false
 
 [dependencies]
-ufmt = "0.2.0"
-embedded-hal = "1.0"
-
-[dependencies.arduino-hal]
-git = "https://github.com/rahix/avr-hal"
-rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
-features = ["arduino-uno"]
